--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <title>List Maker</title>
 
-    <link rel="stylesheet" type="text/css" href="hangman.css">
+    <link rel="stylesheet" type="text/css" href="./hangman.css">
 </head>
 
 <body>
@@ -37,7 +37,7 @@
     </div>
 
 
-    <script src="app.js"></script>
+    <script src="./app.js"></script>
 </body>
 
 </html>
