--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <title>List Maker</title>
 
-    <link rel="stylesheet" type="text/css" href="./hangman.css">
+    <link rel="stylesheet" href="./Hangman.css">
 </head>
 
 <body>
