--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>List Maker</title>
 
-    <link rel="stylesheet" type="text/css" href="Hangman.css">
+    <link rel="stylesheet" type="text/css" href="./Hangman.css">
 </head>
 
 <body>
@@ -28,6 +28,7 @@
 
             </div>
             <div>
+                <button onclick="storageo()" id="addbtn">Storage</button>
                 <button onclick="resetval()" id="addbtn">Reset</button>
                 <button onclick="addval()" id="addbtn">Add</button>
             </div>
@@ -37,7 +38,7 @@
                 
 
             </table>
-
+            <div id="totals"></div>
 
         </div>
     </div>
