--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <div class="container">
             <div class="header">
-                <h1>List Maker</h1>
+                List Maker
             </div>
 
 
