--- a/Storagecontrol.html
+++ b/Storagecontrol.html
@@ -22,7 +22,9 @@
      
 
         <legend>Storage</legend>
-        <div id="outp"></div>
+        <div id="outp">
+<p id="indat"></p>
+</div>
       
     </div>
 
