--- a/Storagecontrol.html
+++ b/Storagecontrol.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="./Storage.css">
+    <link rel="stylesheet" type="text/css" href="./Storage.css" />
     <title>Document</title>
   </head>
   <body>
@@ -23,8 +23,8 @@
 
         <legend>Storage</legend>
         <div id="outp">
-<p id="indat"></p>
-</div>
+          <p id="outpara"></p>
+        </div>
       
     </div>
 
