--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 
 
             <div class="inp">
-                <input type="text" placeholder="add Item" autocomplete="off" id="name">
-                <input type="text" placeholder="Quantity" autocomplete="off" id="quant">
-                <input type="text" placeholder="price/kg,gm" autocomplete="off" id="price">
+                <input type="text" placeholder=" Add Name" autocomplete="off" id="name">
+                <input type="text" placeholder=" Quantity" autocomplete="off" id="quant">
+                <input type="text" placeholder=" Price " autocomplete="off" id="price">
 
             </div>
             <div>
