--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
       integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp"
       crossorigin="anonymous"
     />
-	<link rel="shortcut icon" href="./mask294.png" type="image/x-icon">
+	<link rel="shortcut icon" href="./ListMaker logo.png" type="image/x-icon">
     <link rel="stylesheet" href="./style.css" />
 
-    <title>Application</title>
+    <title>Create List</title>
   </head>
   <body>
 	<header>
@@ -36,9 +36,8 @@
 	</header>
 
 	<div class="menuitems">
-        <button class="btnn" onclick="window.location = './backup.html'">Backup</button>
-        <button class="btnn" onclick="window.location = './import-export/import-export.html'">im/ex-port</button>
-		<button class="btnn" onclick="window.location = './contact.html'">Other</button>
+        <button class="btnn" onclick="window.location = './import-export/import-export.html'">im/ex - port</button>
+		<button class="btnn" onclick="window.location = './contact-us/contact.html'">Contact me</button>
     </div>
 	<div class="nextoverlay" onclick="popupmenu()"></div>
 
