--- a/contact-us/contact.html
+++ b/contact-us/contact.html
@@ -10,6 +10,7 @@
       integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp"
       crossorigin="anonymous"
     />
+    <link rel="shortcut icon" href="../ListMaker logo.png" type="image/x-icon">
 
     <link rel="stylesheet" href="./otherstyle.css">
     <title>contact</title>
