--- a/import-export/import-export.html
+++ b/import-export/import-export.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
 
-    <link rel="shortcut icon" href="../mask294.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../ListMaker logo.png" type="image/x-icon">
     <link rel="stylesheet" href="./import-export.css">
     <title>Import-Export</title>
 </head>
