--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp"
       crossorigin="anonymous"
     />
+    <link rel="manifest" href="./manifest.json">
 	<link rel="shortcut icon" href="./ListMaker logo.png" type="image/x-icon">
     <link rel="stylesheet" href="./style.css" />
 
@@ -24,7 +25,13 @@
 		<div class="logo"><i class="fas fa-list-alt"></i> Create List <sub style="font-size: 0.7rem;font-style: italic;"> by Sagar</sub></div>
 
 		<div class="menuitems2">
-			
+
+			<div class="icons" onclick="location.href='./import-export/import-export.html'" style="color: rgb(38, 68, 56);">
+				<i class="fas fa-upload"> </i> | <i class="fas fa-download"></i> </i>
+			</div>
+      <div class="icons" onclick="location.href='./contact-us/contact.html'" style="color: rgb(38, 68, 56);">
+				<i class="fas fa-envelope"></i>
+			</div>
 			
 		</div>
 
